basic/projects/devops-with-go/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: devops-demo
  labels:
    name: devops-demo
    environment: production
